# altair-ia-ms

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  run-ia-ms-local.sh
.github/workflows/: cd.yml  ci.yml
playbooks/: terminal_v1.txt  web_v1.txt
src/: error.rs  main.rs  state.rs
src/config/: mod.rs
src/middleware/: auth_creator.rs  mod.rs
src/models/: api.rs  lab.rs  mod.rs  run.rs
src/queue/: cloud_tasks.rs  mod.rs
src/repository/: mod.rs  run_uploads_repository.rs  runs_repository.rs
src/routes/: execute.rs  health.rs  internal.rs  local_storage.rs  mod.rs  qualification.rs  runs.rs  uploads.rs
src/services/: anthropic.rs  file_policy.rs  gemini.rs  llm.rs  llm_config.rs  llm_fallback.rs  llm_http.rs  mod.rs  oidc.rs  qualification.rs  run_processor.rs  run_processor_support.rs  storage.rs  structured_form.rs
src/services/prompts/: mod.rs
system-prompts/: README.md  base.md
system-prompts/ctf-generation/: layer1_base_system.txt  layer2_form_field_semantics.txt  layer3_output_contract.txt  variant_playbook_append.txt
system-prompts/ctf-generation/playbooks/: terminal_v1.txt  web_v1.txt
system-prompts/ctf-generation/qualification/: qualification_output_contract_v1.txt  qualification_terminal_v1.txt  qualification_web_v1.txt
system-prompts/qualification/: qualification_output_contract_v1.txt  qualification_terminal_v1.txt
