[package]
name = "altair-ia-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
gcp_auth = "0.12"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "tls-rustls",
  "migrate"
] }
